fixed header flex wrap

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -592,6 +592,7 @@ header {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 /* single item should be centered */
